Removed galleries until further notice. Fixed the dark mode feature
clear

:wq

--- a/themes/showfolio/assets/css/styles.css
+++ b/themes/showfolio/assets/css/styles.css
@@ -10,5 +10,7 @@
 @import "https://use.typekit.net/sto5ndy.css";
 a:link, a:visited, a:hover, a:active{
     text-decoration: none;
-    color: inherit;
+}
+.work {
+    color: white;
 }
